# repo2xml

./: .gitignore  README.md  pyproject.toml
src/repo2xml/: __init__.py  __main__.py  api.py  config.py  facade.py  main.py
src/repo2xml/application/: __init__.py  contracts.py  entry_processor.py  export_pipeline.py  factories.py  file_processing_engine.py  filters.py  pipeline.py  pipeline_orchestrator.py  policies.py  process_result.py  processing_context.py  progress.py  restore_pipeline.py  scan_usecase_factory.py  scanner_service.py  services.py  statistics_collector.py  step.py  step_factory.py  writer.py  writer_coordinator.py
src/repo2xml/application/partition/: __init__.py  buffer_manager.py  decision_strategy.py  multi_stream_manager.py
src/repo2xml/cli/: __init__.py  actions.py  main.py  options.py  params.py  reporting.py  ui.py
src/repo2xml/contracts/: __init__.py  document_writer.py  ingest.py  policies.py  progress.py  scan.py  scan_usecase.py  serialize.py  stats.py  tokenize.py
src/repo2xml/core/: __init__.py  domain.py  filters.py  scanner.py
src/repo2xml/domain/: __init__.py  constants.py  exceptions.py  formatter.py  ignore.py  model.py
src/repo2xml/ingest/: __init__.py  reader.py
src/repo2xml/output/: xml_builder.py
src/repo2xml/services/: __init__.py
src/repo2xml/utils/: __init__.py  logging_utils.py  paths.py  version.py
tests/: init.py
tests/unit/: init.py  test_config.py
tests/unit/application/: __init__.py  test_entry_processor.py  test_factories.py  test_filters.py  test_pipeline.py  test_pipeline_orchestrator.py  test_policies.py  test_processing_context.py  test_restore_pipeline.py  test_statistics_collector.py  test_step_factory.py  test_writer.py
tests/unit/cli/: init.py  test_actions.py  test_main.py  test_params.py  test_reporting.py
tests/unit/contracts/: test_imports.py  test_policies.py
tests/unit/domain/: init.py  test_exceptions.py  test_formatter.py  test_ignore.py  test_models.py
tests/unit/facade/: test_facade.py
tests/unit/services/: __init__.py
tests/unit/utils/: __init__.py  test_paths.py
(+94 files in other folders)
