# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo2xml"
version = "0.5.0"
description = "Convert repository code to XML context for LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9.0",
  "pathspec>=1.0.0",
  "rich>=13.0.0",
  "pyperclip>=1.8.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
zstd = [
  "zstandard>=0.22.0",
]
tokens = [
  "transformers>=4.36.0",
]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
]
# redact-yaml extra kept empty for backward compatibility; pyyaml is now required

[project.scripts]
repo2xml = "repo2xml.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]